# fly-python-volume

./: Dockerfile  fly.toml  pyproject.toml  requirements.txt  run.sh
src/fly_python_volume/: main.py
