[project]
name = "fly-python-volume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brian Li", email = "brian@brianli.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
]

[project.scripts]
fly-python-volume = "fly_python_volume:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fly_python_volume"]
